--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 </head>
 
 <body>
-    <div>
-        <div>
-            <nav>
-                <ul class="navigation">
-                    <li>
-                        Startrly
-                    </li>
-                    <li>
-                        Try Now!
-                    </li>
-                    <li>
-                        About
-                    </li>
-                </ul>
-            </nav>
+    <div class="container">
+        <nav>
+            <ul class="navigation">
+                <li>
+                    Startrly
+                </li>
+                <li>
+                    Try Now!
+                </li>
+                <li>
+                    About
+                </li>
+            </ul>
+        </nav>
 
+        <div id="main">
             <section id="startrly">
                 <h1 class="name">Startrly</h1>
                 <sub class="subtitle">A catchy tagline for a great solution</sub>
@@ -33,146 +33,155 @@
                     <a class="button" href="#">Some Call to Action</a>
                 </div>
             </section>
+        </div>
 
-
-
+        <div class="blockquotes">
             <section>
-                <blockquote id="quote">
+                <blockquote class="quote">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </blockquote>
-                <p id="from">
+                <p class="from">
                     Mx. Lorem
                 </p>
             </section>
+        </div>
 
 
+        <section>
+            <h2 class="heading">Why?</h2>
+
+            <!-- <div class="why-images"> -->
+            <ul class="why-images">
+                <li>
+                    <img src="http://via.placeholder.com/100x100" />
+                    <strong class="text">Comfortable</strong>
+                    <p class="text">
+                        Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+                    </p>
+                </li>
+                <li>
+                    <img src="http://via.placeholder.com/100x100" />
+                    <strong class="text">Robust</strong>
+                    <p class="text">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
+                    </p>
+                </li>
+                <li>
+                    <img src="http://via.placeholder.com/100x100" />
+                    <strong class="text">Convenient</strong>
+                    <p class="text">
+                        Itaque earum rerum hic tenetur a sapiente delectus.
+                    </p>
+                </li>
+            </ul>
+            <!-- </div> -->
+        </section>
+
+
+        <div class="blockquotes">
             <section>
-                <h2>Why?</h2>
-                <ul class="why">
-                    <li>
-                        <img src="http://via.placeholder.com/100x100" />
-                        <strong>Comfortable</strong>
-                        <p>
-                            Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
-                        </p>
-                    </li>
-                    <li>
-                        <img src="http://via.placeholder.com/100x100" />
-                        <strong>Robust</strong>
-                        <p>
-                            At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
-                        </p>
-                    </li>
-                    <li>
-                        <img src="http://via.placeholder.com/100x100" />
-                        <strong>Convenient</strong>
-                        <p>
-                            Itaque earum rerum hic tenetur a sapiente delectus.
-                        </p>
-                    </li>
-                </ul>
-            </section>
-
-
-            <section>
-                <blockquote>
+                <blockquote class="quote">
                     Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
                 </blockquote>
-                <p>
+                <p class="from">
                     Mx. Ipsum
                 </p>
             </section>
+        </div>
 
-
-            <section>
-                <h2>Meet the team</h2>
-                <ul class="team">
+        <section>
+            <h2 class="heading">Meet the team</h2>
+            <ul class="team">
+                <div class="first-three">
                     <li>
-                        <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-                        <span>Kari Kiwi</span>
-                        <span>CFO</span>
+                        <img class="circle" src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+                        <span class="name-title">Kari Kiwi</span>
+                        <span class="name-title">CFO</span>
                     </li>
                     <li>
-                        <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-                        <span>Dan Dragon</span>
-                        <span>CMO</span>
+                        <img class="circle" src="https://placebear.com/150/150" alt="profile for dan dragon" />
+                        <span class="name-title">Dan Dragon</span>
+                        <span class="name-title">CMO</span>
                     </li>
                     <li>
-                        <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-                        <span>Chris Caribou</span>
-                        <span>CIO</span>
+                        <img class="circle" src="https://placebear.com/150/150" alt="profile for chris caribou" />
+                        <span class="name-title">Chris Caribou</span>
+                        <span class="name-title">CIO</span>
                     </li>
+                </div>
+                <div class="last-two">
                     <li>
-                        <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+                        <img class="circle" src="https://placebear.com/150/150" alt="profile for charles cheetah" />
                         <span>Charles Cheetah</span>
                         <span>Board Member, CTO</span>
                     </li>
                     <li>
-                        <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
+                        <img class="circle" src="https://placebear.com/150/150" alt="profile for dee dugong" />
                         <span>Dee Dugong</span>
                         <span>Startup Enthusiast</span>
                     </li>
-                </ul>
-            </section>
-
-
-            <section>
-                <h2>Sponsors</h2>
-                <ul class="sponsors">
-                    <li>
-                        <img src="http://via.placeholder.com/300x100" />
-                    </li>
-                    <li>
-                        <img src="http://via.placeholder.com/250x125" />
-                    </li>
-                    <li>
-                        <img src="http://via.placeholder.com/275x70" />
-                    </li>
-                    <li>
-                        <img src="http://via.placeholder.com/250x120" />
-                    </li>
-                    <li>
-                        <img src="http://via.placeholder.com/220x100" />
-                    </li>
-                </ul>
-            </section>
-
-
-            <section class="why">
-                <div>
-                    <h3>Support</h3>
-                    <ul>
-                        <li>
-                            Demo
-                        </li>
-                        <li>
-                            Support
-                        </li>
-                        <li>
-                            Contact
-                        </li>
-                        <li>
-                            Docs
-                        </li>
-                    </ul>
                 </div>
-                <div>
-                    <h3>About</h3>
-                    <ul>
-                        <li>
-                            Our Mission
-                        </li>
-                        <li>
-                            Careers
-                        </li>
-                        <li>
-                            Get in Touch
-                        </li>
-                    </ul>
-                </div>
-            </section>
+            </ul>
+        </section>
 
-        </div>
+
+        <section>
+            <h2 class="heading">Sponsors</h2>
+            <ul class="sponsors">
+                <li>
+                    <img src="http://via.placeholder.com/300x100" />
+                </li>
+                <li>
+                    <img src="http://via.placeholder.com/250x125" />
+                </li>
+                <li>
+                    <img src="http://via.placeholder.com/275x70" />
+                </li>
+                <li>
+                    <img src="http://via.placeholder.com/250x120" />
+                </li>
+                <li>
+                    <img src="http://via.placeholder.com/220x100" />
+                </li>
+            </ul>
+        </section>
+
+
+        <section class="support">
+            <div>
+                <h3>Support</h3>
+                <ul>
+                    <li>
+                        Demo
+                    </li>
+                    <li>
+                        Support
+                    </li>
+                    <li>
+                        Contact
+                    </li>
+                    <li>
+                        Docs
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>About</h3>
+                <ul>
+                    <li>
+                        Our Mission
+                    </li>
+                    <li>
+                        Careers
+                    </li>
+                    <li>
+                        Get in Touch
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+    </div>
 </body>
 
 </html>
