--- a/index.html
+++ b/index.html
@@ -45,17 +45,16 @@
       <section class="why-section content">
         <h2>Why?</h2>
         <ul>
-          <li>
+          <li class="gridstyle">
             <img src="http://via.placeholder.com/100x100" />
             <div>
               <strong>Comfortable</strong>
-            
               <p>
                 Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
               </p>
             </div>
           </li>
-          <li>
+          <li class="gridstyle">
             <img src="http://via.placeholder.com/100x100" />
             <div>
               <strong>Robust</strong>
@@ -64,9 +63,9 @@
               </p>
             </div>
           </li>
-          <li>
-            <div>
+          <li class="gridstyle">
               <img src="http://via.placeholder.com/100x100" />
+              <div>
               <strong>Convenient</strong>
               <p>
                 Itaque earum rerum hic tenetur a sapiente delectus.
