--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel=StyleSheet href="styles/style.css" type="text/css" media=screen>
   </head>
   <body>
-    <div class="container">
 
 
       <nav>
@@ -25,7 +24,7 @@
       </nav>
 
 
-      <section>
+      <section id="hero">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
@@ -168,6 +167,6 @@
         </div>
       </section>
 
-    </div>
+
   </body>
 </html>
