--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Startrly</title>
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|PT+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|PT+Mono|Heebo:500" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -26,9 +26,11 @@
 
 
       <section class="tagline">
-        <h1>Startrly</h1>
+        <h1 id="startrly">Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
+        <div>
+        <button><a href="#">Some Call to Action</a></button>
+      </div>
       </section>
 
 
@@ -36,7 +38,7 @@
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
-        <p>
+        <p class="author">
           Mx. Lorem
         </p>
       </section>
@@ -74,7 +76,7 @@
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
-        <p>
+        <p class="author">
           Mx. Ipsum
         </p>
       </section>
