--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </section>
 
 
-      <section>
+      <section class="footer">
         <div>
           <h3>Support</h3>
           <ul>
