--- a/index.html
+++ b/index.html
@@ -86,33 +86,43 @@
     </section>
 
 
-    <section>
+    <section id="team">
       <h2>Meet the team</h2>
       <ul>
         <li>
-          <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-          <span>Kari Kiwi</span>
-          <span>CFO</span>
+          <div class="team-member">
+            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+            <span>Kari Kiwi</span>
+            <span>CFO</span>
+          </div>
         </li>
         <li>
-          <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-          <span>Dan Dragon</span>
-          <span>CMO</span>
+          <div class="team-member">
+            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
+            <span>Dan Dragon</span>
+            <span>CMO</span>
+          </div>
         </li>
         <li>
-          <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-          <span>Chris Caribou</span>
-          <span>CIO</span>
+          <div class="team-member">
+            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
+            <span>Chris Caribou</span>
+            <span>CIO</span>
+          </div>
         </li>
         <li>
-          <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-          <span>Charles Cheetah</span>
-          <span>Board Member, CTO</span>
+          <div class="team-member">
+            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+            <span>Charles Cheetah</span>
+            <span>Board Member, CTO</span>
+          </div>
         </li>
         <li>
-          <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-          <span>Dee Dugong</span>
-          <span>Startup Enthusiast</span>
+          <div class="team-member">
+            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
+            <span>Dee Dugong</span>
+            <span>Startup Enthusiast</span>
+          </div>
         </li>
       </ul>
     </section>
