--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="styles/normalize.css" rel="stylesheet">
+    <link href="styles/styles.css" rel="stylesheet">
     <title>Startrly</title>
   </head>
   <body>
-    <div>
+    <div class="container">
 
 
-      <nav>
+      <nav class="header">
         <ul>
           <li>
             Startrly
@@ -23,14 +25,14 @@
       </nav>
 
 
-      <section>
+      <section class="title">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -40,7 +42,7 @@
       </section>
 
 
-      <section>
+      <section class="why">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -68,7 +70,7 @@
       </section>
 
 
-      <section>
+      <section class="second-quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -78,7 +80,7 @@
       </section>
 
 
-      <section>
+      <section class="team">
         <h2>Meet the team</h2>
         <ul>
           <li>
@@ -110,7 +112,7 @@
       </section>
 
 
-      <section>
+      <section class="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -132,7 +134,7 @@
       </section>
 
 
-      <section>
+      <section class="support">
         <div>
           <h3>Support</h3>
           <ul>
