--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/normalize.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/styles.css" /> 
   </head>
   <body>
+    <main class="container">
     <div>
 
 
@@ -23,14 +27,15 @@
       </nav>
 
 
-      <section>
+      <section class="about">
         <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
+        <p><sub>A catchy tagline for a great solution</sub></p>
+    
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -40,7 +45,7 @@
       </section>
 
 
-      <section>
+      <section class="qualities">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -68,7 +73,7 @@
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -78,30 +83,30 @@
       </section>
 
 
-      <section>
+      <section class="team">
         <h2>Meet the team</h2>
         <ul>
-          <li>
+          <li class="a">
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
             <span>Kari Kiwi</span>
             <span>CFO</span>
           </li>
-          <li>
+          <li class="b">
             <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
             <span>Dan Dragon</span>
             <span>CMO</span>
           </li>
-          <li>
+          <li class="c">
             <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
             <span>Chris Caribou</span>
             <span>CIO</span>
           </li>
-          <li>
+          <li class="d">
             <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
             <span>Charles Cheetah</span>
             <span>Board Member, CTO</span>
           </li>
-          <li>
+          <li class="e">
             <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
             <span>Dee Dugong</span>
             <span>Startup Enthusiast</span>
@@ -110,9 +115,10 @@
       </section>
 
 
-      <section>
+      <section class="sponsors">
         <h2>Sponsors</h2>
         <ul>
+          
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
@@ -125,14 +131,14 @@
           <li>
             <img src="http://via.placeholder.com/250x120" />
           </li>
-          <li>
+          <li class="last">
             <img src="http://via.placeholder.com/220x100" />
           </li>
         </ul>
       </section>
 
 
-      <section>
+      <section class="support">
         <div>
           <h3>Support</h3>
           <ul>
@@ -167,5 +173,6 @@
       </section>
 
     </div>
+  </main>
   </body>
 </html>
