--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
       </section>
 
 
-      <section class="sponsers">
+      <section class="sponsors">
         <h2>Sponsors</h2>
-        <ul>
+        <ul class="sponsor_images">
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
