--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="normalize.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
   </head>
   <body>
     <div>
 
-
       <nav>
-        <ul>
+        <ul class="nav">
           <li>
             Startrly
           </li>
@@ -23,12 +24,13 @@
       </nav>
 
 
-      <section>
+      <section class="intro">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
+      <hr>
 
       <section>
         <blockquote>
@@ -39,8 +41,9 @@
         </p>
       </section>
 
+      <hr>
 
-      <section>
+      <section class="why">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -67,6 +70,7 @@
         </ul>
       </section>
 
+      <hr>
 
       <section>
         <blockquote>
@@ -77,40 +81,39 @@
         </p>
       </section>
 
+      <hr>
 
-      <section>
+      <section class="team">
         <h2>Meet the team</h2>
-        <ul>
-          <li>
+        <div class="CFO">
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
             <span>Kari Kiwi</span>
             <span>CFO</span>
-          </li>
-          <li>
+        </div >
+        <div class="CMO">
             <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
             <span>Dan Dragon</span>
             <span>CMO</span>
-          </li>
-          <li>
+        </div>
+        <div class="CIO">
             <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
             <span>Chris Caribou</span>
             <span>CIO</span>
-          </li>
-          <li>
+        </div>
+        <div class="CTO">
             <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
             <span>Charles Cheetah</span>
             <span>Board Member, CTO</span>
-          </li>
-          <li>
+        </div>
+        <div class="Enthusiast">
             <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
             <span>Dee Dugong</span>
             <span>Startup Enthusiast</span>
-          </li>
-        </ul>
+        </div>
       </section>
 
 
-      <section>
+      <section class="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -131,8 +134,9 @@
         </ul>
       </section>
 
+      <hr>
 
-      <section>
+      <section class="footer">
         <div>
           <h3>Support</h3>
           <ul>
